update admissions.html top and middle buttons, add "parents" and "high school..." buttons; update button colors; tweak global search element positions

--- a/development/terminalfour/src/html/admissions.html
+++ b/development/terminalfour/src/html/admissions.html
@@ -386,71 +386,82 @@
             </div>
          </div>
          <div class="row action-btns-container">
-            <a class="rowdyred col-xs-12 col-lg-4 action-btns" href="/admissions/apply/">
+           <a class="rowdyblue col-xs-12 col-lg-3 action-btns" href="#">
+           <span class="action-btns-text">WHAT TYPE OF STUDENT ARE YOU?</span>
+           </a>
+           <a class="rowdyred col-xs-12 col-lg-3 action-btns" href="https://admission.msudenver.edu/Datatel.ERecruiting.Web.External/Pages/Login.aspx">
+           <span class="action-btns-text">CHECK STATUS / FINISH APPLICATION</span>
+           </a>
+            <a class="rowdygray col-xs-12 col-lg-3 action-btns" href="/admissions/apply/">
             <span class="action-btns-text">START YOUR APPLICATION</span>
             </a>
-            <a class="rowdyblue col-xs-12 col-lg-4 action-btns" href="https://admission.msudenver.edu/Datatel.ERecruiting.Web.External/Pages/Login.aspx">
-            <span class="action-btns-text">CHECK STATUS / FINISH APPLICATION</span>
-            </a>
-            <a class="rowdygray col-xs-12 col-lg-4 action-btns" href="/admissions/after/">
+            <a class="col-xs-12 col-lg-3 action-btns action-btns-last" href="/admissions/after/">
             <span class="action-btns-text">AFTER YOU'VE BEEN ADMITTED</span>
             </a>
          </div>
-         <div class="col-xs-12 col-sm-3 info-section">
-            <a class="info-box" href="/programs/">
-            <span class="infocenter">Academic Programs</span>
-            </a>
-            <a class="info-box" href="/admissions/cost">
-            <span class="infocenter"> Cost </span>
-            </a>
-            <a class="info-box" href="/campuslife">
-            <span class="infocenter">  CampusLife </span>
-            </a>
+         <div class="row">
+           <div class="col-xs-12 col-sm-3 info-section">
+              <a class="info-box" href="/programs/">
+              <span class="infocenter">Academic Programs</span>
+              </a>
+              <a class="info-box" href="/admissions/cost">
+              <span class="infocenter">Cost</span>
+              </a>
+              <a class="info-box" href="/campuslife">
+              <span class="infocenter">CampusLife</span>
+              </a>
+           </div>
+           <div class="col-xs-12 col-sm-3 info-section">
+              <a class="info-box" href="requestinfo">
+              <span class="infocenter">Request Info</span>
+              </a>
+              <a class="info-box" href="takeatour">
+              <span class="infocenter">Take a Tour</span>
+              </a>
+              <a class="info-box" href="counselor">
+              <span class="infocenter">Meet an Admissions Counselor</span>
+              </a>
+           </div>
+           <div class="col-xs-12 col-sm-3 info-section">
+              <a class="info-box" href="findus">
+              <span class="infocenter">Find Us</span>
+              </a>
+              <a class="info-box" href="/openhouse">
+              <span class="infocenter">Attend Open House</span>
+              </a>
+              <a class="info-box" href="contact">
+              <span class="infocenter">Contact Admissions</span>
+              </a>
+           </div>
+           <!-- <div class="col-xs-12 col-sm-3 panel"> -->
+           <div class="col-xs-12 col-sm-3">
+              <h4 class="actionHeader events admissions-deadlines" data-href="/events/academic">Dates / Deadlines</h4>
+              <div id="homepage_events" class="">
+                 <script type="text/javascript" src="//www.trumba.com/scripts/spuds.js"></script>
+                 <script type="text/javascript">
+                    $Trumba.addSpud({
+                        webName: "msudenver-events-calendars",
+                        spudType : "upcoming" ,
+                        spudConfig : "Admissions Feed" ,
+                        url : { filterview : "AdmissionsFilter" } ,
+                        teaserBase : "http://www.msudenver.edu/events"
+                    });
+                 </script>
+                 <noscript>Your browser must support JavaScript to view this content.
+                    Please enable JavaScript in your browser settings then try again.
+                 </noscript>
+              </div>
+           </div>
          </div>
-         <div class="col-xs-12 col-sm-3 info-section">
-            <a class="info-box" href="requestinfo">
-            <span class="infocenter">Request Info</span>
-            </a>
-            <a class="info-box" href="takeatour">
-            <span class="infocenter">Take a Tour</span>
-            </a>
-            <a class="info-box" href="counselor">
-            <span class="infocenter">Meet an Admissions Counselor</span>
-            </a>
-         </div>
-         <div class="col-xs-12 col-sm-3 info-section">
-            <a class="info-box" href="findus">
-            <span class="infocenter">Find Us</span>
-            </a>
-            <a class="info-box" href="/openhouse">
-            <span class="infocenter">Attend Open House</span>
-            </a>
-            <a class="info-box" href="contact">
-            <span class="infocenter">Contact Admissions</span>
-            </a>
-         </div>
-         <div class="col-xs-12 col-sm-3 panel">
-            <h4 class="actionHeader events admissions-deadlines" data-href="/events/academic">Dates / Deadlines</h4>
-            <div id="homepage_events" class="">
-               <script type="text/javascript" src="//www.trumba.com/scripts/spuds.js"></script>
-               <script type="text/javascript">
-                  $Trumba.addSpud({
-                      webName: "msudenver-events-calendars",
-                      spudType : "upcoming" ,
-                      spudConfig : "Admissions Feed" ,
-                      url : { filterview : "AdmissionsFilter" } ,
-                      teaserBase : "http://www.msudenver.edu/events"
-                  });
-               </script>
-               <noscript>Your browser must support JavaScript to view this content.
-                  Please enable JavaScript in your browser settings then try again.
-               </noscript>
-            </div>
-         </div>
-         <div class="col-xs-12 col-sm-6 info-section">
-            <a class="info-box" href="/admissions/parents/">
-            <span class="infocenter">Parents</span>
-            </a>
+         <div class="row">
+           <div class="info-section col-xs-12 col-sm-9">
+              <a class="info-box-lower col-xs-12 col-sm-6" href="/admissions/parents/">
+              <span class="infocenter">Parents</span>
+              </a>
+              <a class="info-box-lower col-xs-12 col-sm-6" href="#">
+              <span class="infocenter">High School / Community College Counselors</span>
+              </a>
+           </div>
          </div>
          <!-- / code only section -->
          <!-- *********************************  -->
