rearrange/update buttons, update links

--- a/development/terminalfour/src/html/admissions.html
+++ b/development/terminalfour/src/html/admissions.html
@@ -386,13 +386,13 @@
             </div>
          </div>
          <div class="row action-btns-container">
-           <a class="rowdyblue col-xs-12 col-lg-3 action-btns" href="#">
+           <a class="rowdyblue col-xs-12 col-lg-3 action-btns" href="/admissions/apply/">
            <span class="action-btns-text">WHAT TYPE OF STUDENT ARE YOU?</span>
            </a>
            <a class="rowdyred col-xs-12 col-lg-3 action-btns" href="https://admission.msudenver.edu/Datatel.ERecruiting.Web.External/Pages/Login.aspx">
            <span class="action-btns-text">CHECK STATUS / FINISH APPLICATION</span>
            </a>
-            <a class="rowdygray col-xs-12 col-lg-3 action-btns" href="/admissions/apply/">
+            <a class="rowdygray col-xs-12 col-lg-3 action-btns" href="https://admission.msudenver.edu/Datatel.ERecruiting.Web.External/Pages/createaccount.aspx?f=47f25680-5e31-499b-a1a7-a9916cf8d5a3">
             <span class="action-btns-text">START YOUR APPLICATION</span>
             </a>
             <a class="col-xs-12 col-lg-3 action-btns action-btns-last" href="/admissions/after/">
@@ -404,33 +404,33 @@
               <a class="info-box" href="/programs/">
               <span class="infocenter">Academic Programs</span>
               </a>
-              <a class="info-box" href="/admissions/cost">
+              <a class="info-box" href="/cost">
               <span class="infocenter">Cost</span>
               </a>
               <a class="info-box" href="/campuslife">
-              <span class="infocenter">CampusLife</span>
+              <span class="infocenter">Campus Life</span>
               </a>
            </div>
            <div class="col-xs-12 col-sm-3 info-section">
-              <a class="info-box" href="requestinfo">
+             <a class="info-box" href="/visit">
+             <span class="infocenter">Visit Us</span>
+             </a>
+             <a class="info-box" href="/admissions/counselor">
+             <span class="infocenter">Meet an Admissions Counselor</span>
+             </a>
+              <a class="info-box" href="/admissions/requestinfo">
               <span class="infocenter">Request Info</span>
               </a>
-              <a class="info-box" href="takeatour">
-              <span class="infocenter">Take a Tour</span>
-              </a>
-              <a class="info-box" href="counselor">
-              <span class="infocenter">Meet an Admissions Counselor</span>
-              </a>
            </div>
            <div class="col-xs-12 col-sm-3 info-section">
-              <a class="info-box" href="findus">
-              <span class="infocenter">Find Us</span>
+              <a class="info-box" href="/admissions/admissionsrequirements">
+              <span class="infocenter">Admissions Requirements</span>
               </a>
-              <a class="info-box" href="/openhouse">
-              <span class="infocenter">Attend Open House</span>
+              <a class="info-box" href="/admissions/residency">
+              <span class="infocenter">Residency</span>
               </a>
-              <a class="info-box" href="contact">
-              <span class="infocenter">Contact Admissions</span>
+              <a class="info-box" href="/admissions/forms">
+              <span class="infocenter">Admissions Forms</span>
               </a>
            </div>
            <!-- <div class="col-xs-12 col-sm-3 panel"> -->
@@ -458,7 +458,7 @@
               <a class="info-box-lower col-xs-12 col-sm-6" href="/admissions/parents/">
               <span class="infocenter">Parents</span>
               </a>
-              <a class="info-box-lower col-xs-12 col-sm-6" href="#">
+              <a class="info-box-lower col-xs-12 col-sm-6" href="/admissions/highschoolcommunitycollegecounselors">
               <span class="infocenter">High School / Community College Counselors</span>
               </a>
            </div>
