Rearrange stacking order of "parents" and "high school" buttons on mobile

--- a/development/terminalfour/src/html/admissions.html
+++ b/development/terminalfour/src/html/admissions.html
@@ -400,38 +400,52 @@
             </a>
          </div>
          <div class="row">
-           <div class="col-xs-12 col-sm-3 info-section">
-              <a class="info-box" href="/programs/">
-              <span class="infocenter">Academic Programs</span>
-              </a>
-              <a class="info-box" href="/cost">
-              <span class="infocenter">Cost</span>
-              </a>
-              <a class="info-box" href="/campuslife">
-              <span class="infocenter">Campus Life</span>
-              </a>
-           </div>
-           <div class="col-xs-12 col-sm-3 info-section">
-             <a class="info-box" href="/visit">
-             <span class="infocenter">Visit Us</span>
-             </a>
-             <a class="info-box" href="/admissions/counselor">
-             <span class="infocenter">Meet an Admissions Counselor</span>
-             </a>
-              <a class="info-box" href="/admissions/requestinfo">
-              <span class="infocenter">Request Info</span>
-              </a>
-           </div>
-           <div class="col-xs-12 col-sm-3 info-section">
-              <a class="info-box" href="/admissions/admissionsrequirements">
-              <span class="infocenter">Admissions Requirements</span>
-              </a>
-              <a class="info-box" href="/admissions/residency">
-              <span class="infocenter">Residency</span>
-              </a>
-              <a class="info-box" href="/admissions/forms">
-              <span class="infocenter">Admissions Forms</span>
-              </a>
+           <div class="col-xs-12 col-sm-9" style="padding: 0px;">
+             <div class="row">
+               <div class="col-xs-12 col-sm-4 info-section">
+                  <a class="info-box" href="/programs/">
+                    <span class="infocenter">Academic Programs</span>
+                  </a>
+                  <a class="info-box" href="/cost">
+                    <span class="infocenter">Cost</span>
+                  </a>
+                  <a class="info-box" href="/campuslife">
+                    <span class="infocenter">Campus Life</span>
+                  </a>
+               </div>
+               <div class="col-xs-12 col-sm-4 info-section">
+                 <a class="info-box" href="/visit">
+                  <span class="infocenter">Visit Us</span>
+                 </a>
+                 <a class="info-box" href="/admissions/counselor">
+                  <span class="infocenter">Meet an Admissions Counselor</span>
+                 </a>
+                  <a class="info-box" href="/admissions/requestinfo">
+                   <span class="infocenter">Request Info</span>
+                  </a>
+               </div>
+               <div class="col-xs-12 col-sm-4 info-section">
+                  <a class="info-box" href="/admissions/admissionsrequirements">
+                   <span class="infocenter">Admissions Requirements</span>
+                  </a>
+                  <a class="info-box" href="/admissions/residency">
+                   <span class="infocenter">Residency</span>
+                  </a>
+                  <a class="info-box" href="/admissions/forms">
+                   <span class="infocenter">Admissions Forms</span>
+                  </a>
+               </div>
+             </div>
+             <div class="row">
+               <div class="info-section col-xs-12">
+                  <a class="info-box-lower col-xs-12 col-sm-6" href="/admissions/parents/">
+                  <span class="infocenter">Parents</span>
+                  </a>
+                  <a class="info-box-lower col-xs-12 col-sm-6" href="/admissions/highschoolcommunitycollegecounselors">
+                  <span class="infocenter">High School / Community College Counselors</span>
+                  </a>
+               </div>
+             </div>
            </div>
            <!-- <div class="col-xs-12 col-sm-3 panel"> -->
            <div class="col-xs-12 col-sm-3">
@@ -453,16 +467,7 @@
               </div>
            </div>
          </div>
-         <div class="row">
-           <div class="info-section col-xs-12 col-sm-9">
-              <a class="info-box-lower col-xs-12 col-sm-6" href="/admissions/parents/">
-              <span class="infocenter">Parents</span>
-              </a>
-              <a class="info-box-lower col-xs-12 col-sm-6" href="/admissions/highschoolcommunitycollegecounselors">
-              <span class="infocenter">High School / Community College Counselors</span>
-              </a>
-           </div>
-         </div>
+
          <!-- / code only section -->
          <!-- *********************************  -->
          <!-- SITEMANAGER START FOOTER -->
