--- a/development/terminalfour/src/html/admissions.html
+++ b/development/terminalfour/src/html/admissions.html
@@ -437,7 +437,7 @@
                </div>
              </div>
              <div class="row">
-               <div class="info-section col-xs-12">
+               <div class="info-section infobox-last-row col-xs-12">
                   <a class="info-box-lower col-xs-12 col-sm-6" href="/admissions/parents/">
                   <span class="infocenter">Parents</span>
                   </a>
