starts experimentation with new havigation

--- a/development/terminalfour/src/html/index.html
+++ b/development/terminalfour/src/html/index.html
@@ -13,6 +13,7 @@
 </head>
     <body>
         @@include('header.html')
+        @@include('topnavigation.html')
         <main class="homepage-main">
 						<!-- @@include('homepage-second-nav.html') -->
             @@include('homepage-feature-caption.html')
