promo area styles, create new @@includes, consolidate button-styles blocks

--- a/development/terminalfour/src/html/2column.html
+++ b/development/terminalfour/src/html/2column.html
@@ -83,8 +83,9 @@
                         <!-- SITEMANAGER HEADER ENDS HERE -->
                         <!-- *********************************  -->
 
-        @@include('content.html')
-        @@include('panel.html')
+        include('content.html')
+        include('panel.html')
+        @@include('promo.html')
 
                         <!-- *********************************  -->
                         <!-- SITEMANAGER START FOOTER -->
