--- a/www-root/index.html
+++ b/www-root/index.html
@@ -89,9 +89,9 @@
                <li>
                   <a href="#"  role="button">Athletics </a>
                </li>
-               <button type="button" class="btn rowdyblue" data-toggle="modal" data-target="#myModal">
-               Search
-               </button>
+               <li>
+                  <button type="button" class="btn rowdyblue" data-toggle="modal" data-target="#myModal">Search</button>
+               </li>
             </ul>
          </div>
          <!-- /.navbar-collapse -->
