***IMPORTANT*** more code blocks for reconciling

--- a/www-root/index.html
+++ b/www-root/index.html
@@ -109,7 +109,7 @@
                     <li><a href="/alumni/contactus/">Contact Alumni &amp; Friends</a></li>
                   </ul>
                </li>
-               <li class="collapse navbar-collapse">
+               <li class="dropdown collapse navbar-collapse dropdown-last">
                   <a href="http://roadrunnersathletics.com"  role="button">Athletics </a>
                </li>
                <li id="nav-search" type="button">
