--- a/www-root/index.html
+++ b/www-root/index.html
@@ -13,6 +13,7 @@
 </head>
     <body>
         <!-- Global Header -->
+<a href="#content" class="skip">Skip to content</a>
 <header>
    <div class="navbar-fixed-top ">
       <div class="header-container" style="background-image:url(https://msudenver.edu/media/newsiteassets/images/header_asphalt.png); background-size: 100%;" alt="Asphalt Image">
