add skip-to-content, fix ADA button-to-a, add ADA sr-label label

--- a/development/terminalfour/src/html/2column.html
+++ b/development/terminalfour/src/html/2column.html
@@ -256,6 +256,7 @@ lhnWin=window.open('http://chat.msudenver.edu/lhn/livechatvisitor.aspx?lhnid=294
     <script>
     w3IncludeHTML();
     </script>
+    <t4 type="media" id="129892"/><!--skipnav.js--> 
 </body>
 
 </html>
