--- a/development/terminalfour/src/html/homepage.html
+++ b/development/terminalfour/src/html/homepage.html
@@ -323,6 +323,7 @@ lhnWin=window.open('http://chat.msudenver.edu/lhn/livechatvisitor.aspx?lhnid=294
 </SCRIPT>
 
 <script type="text/javascript" src="jquery/headerQuery.js"></script>
+<t4 type="media" id="129892"/><!--skipnav.js--> 
 
 </body>
 
