--- a/www-root/index.html
+++ b/www-root/index.html
@@ -613,16 +613,16 @@
 
 
 					if( position <= 15 && width > width_threshold) {
-						$("button.btn.btn-default.visit-give-mobile").css("top", "-5.7em");
-						$("button.btn.btn-default.give-mobile").css("top", "-5.7em");
-						$("button.btn.btn-default.apply-mobile").css("top", "-5.7em");
+						$("a.btn.btn-default.visit-give-mobile").css("top", "-5.7em");
+						$("a.btn.btn-default.give-mobile").css("top", "-5.7em");
+						$("a.btn.btn-default.apply-mobile").css("top", "-5.7em");
 					}
 				  if( position > 15 && width > width_threshold) {
 				    $(".header-fluid").toggleClass("header-fluid-change");
 				    $(".msudenver_logo").toggleClass("msudenver_logo_change");
-						$("button.btn.btn-default.visit-give-mobile").css("top", "-4.9em");
-						$("button.btn.btn-default.give-mobile").css("top", "-4.9em");
-						$("button.btn.btn-default.apply-mobile").css("top", "-4.9em");
+						$("a.btn.btn-default.visit-give-mobile").css("top", "-4.9em");
+						$("a.btn.btn-default.give-mobile").css("top", "-4.9em");
+						$("a.btn.btn-default.apply-mobile").css("top", "-4.9em");
 				  }
 
 				});
