fix ADA searchbar "myModalLabel"

--- a/www-root/index.html
+++ b/www-root/index.html
@@ -128,6 +128,7 @@
 <!-- Button trigger modal -->
 <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <h4 class="modal-title" id="myModalLabel">Search MSU Denver</h4>
    <div class="modal-dialog" role="document">
       <div class="modal-content">
          <div class="modal-header">
