--- a/development/terminalfour/src/html/index.html
+++ b/development/terminalfour/src/html/index.html
@@ -6,7 +6,7 @@
 	<title>MSU Denver - Homepage</title>
   <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/7291556/7343172/css/fonts.css" />
 	<link href="style-assets/media/fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" media="screen" />
-	<link rel="stylesheet" href="style-assets/css/style.css" />
+	<link rel="stylesheet" href="style-assets/css/homepage-style.css" />
 <!--	<link rel="stylesheet" href="style-assets/lib/slick-1.6.0/slick/slick.css" />-->
 
 	<script src="style-assets/lib/jquery/jquery.min.js"></script>
