fix conflicting collapse; add menu scrolling & scrolltop; activate search

--- a/development/terminalfour/src/html/index.html
+++ b/development/terminalfour/src/html/index.html
@@ -47,7 +47,7 @@
 				$('#bs-example-navbar-collapse-1').css('max-height',$(window).height());
 				</script> -->
 				<script>
-				$('.navbar-nav').css('max-height',$(window).height());
+				$('#menu-nav').css('max-height',$(window).height()-79);
 				</script>
 				<script>
 				// scrollTop function
@@ -68,9 +68,9 @@
 				  if( position > 15 && width > width_threshold) {
 				    $(".header-fluid").toggleClass("header-fluid-change");
 				    $(".msudenver_logo").toggleClass("msudenver_logo_change");
-						$("a.btn.btn-default.visit-give-mobile").css("top", "-5.9em");
-						$("a.btn.btn-default.give-mobile").css("top", "-5.9em");
-						$("a.btn.btn-default.apply-mobile").css("top", "-5.9em");
+						$("a.btn.btn-default.visit-give-mobile").css("top", "-5.7em");
+						$("a.btn.btn-default.give-mobile").css("top", "-5.7em");
+						$("a.btn.btn-default.apply-mobile").css("top", "-5.7em");
 				  }
 
 				});
