fix V/G/A 7-item list error; fix various text items; add aria-labels; connect search feature; fix errant side-menu indent

--- a/development/terminalfour/src/html/index.html
+++ b/development/terminalfour/src/html/index.html
@@ -61,16 +61,16 @@
 
 
 					if( position <= 15 && width > width_threshold) {
-						$("a.btn.btn-default.visit-give-mobile").css("top", "-6.7em");
-						$("a.btn.btn-default.give-mobile").css("top", "-6.7em");
-						$("a.btn.btn-default.apply-mobile").css("top", "-6.7em");
+						$("a.btn.btn-default.visit-give-mobile").css("top", "-109px");
+						$("a.btn.btn-default.give-mobile").css("top", "-109px");
+						$("a.btn.btn-default.apply-mobile").css("top", "-109px");
 					}
 				  if( position > 15 && width > width_threshold) {
 				    $(".header-fluid").toggleClass("header-fluid-change");
 				    $(".msudenver_logo").toggleClass("msudenver_logo_change");
-						$("a.btn.btn-default.visit-give-mobile").css("top", "-5.7em");
-						$("a.btn.btn-default.give-mobile").css("top", "-5.7em");
-						$("a.btn.btn-default.apply-mobile").css("top", "-5.7em");
+						$("a.btn.btn-default.visit-give-mobile").css("top", "-95px");
+						$("a.btn.btn-default.give-mobile").css("top", "-95px");
+						$("a.btn.btn-default.apply-mobile").css("top", "-95px");
 				  }
 
 				});
