combine homepage-style with inner-style and rename to main-style

--- a/development/terminalfour/src/html/admissions.html
+++ b/development/terminalfour/src/html/admissions.html
@@ -48,7 +48,7 @@
       <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/7291556/7343172/css/fonts.css" />
       <link href="style-assets/media/fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" media="screen" />
       <!-- CSS -->
-      <link rel="stylesheet" href="style-assets/css/inner-style.css" />
+      <link rel="stylesheet" href="style-assets/css/main-style.css" />
       <!-- HTML5 shim & respond.js, for IE6-8 support of HTML5 elements -->
       <!--[if lt IE 9]>
       <script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.2.0/respond.min.js"></script>
@@ -63,7 +63,7 @@
       <link rel="apple-touch-icon-precomposed" href="<t4 type='media' id='60989' formatter='image/path'/>">
       <link rel="shortcut icon" href="<t4 type='media' id='60993' formatter='image/path'/>">
    </head>
-   <body>
+   <body class="admissions-style">
       <!-- google analytics -->
       <!-- GTM fireGtm variable -->
       <script type="text/javascript">
