--- a/development/terminalfour/src/html/homepage.html
+++ b/development/terminalfour/src/html/homepage.html
@@ -28,7 +28,7 @@
 <!-- <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,700,800" rel="stylesheet"> -->
 
 <!-- CSS -->
-<link rel="stylesheet" type="text/css" media="screen" href="styles/home2016.css" />
+<link rel="stylesheet" type="text/css" media="screen" href="style-assets/css/main-style.css" />
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
@@ -323,7 +323,7 @@ lhnWin=window.open('http://chat.msudenver.edu/lhn/livechatvisitor.aspx?lhnid=294
 </SCRIPT>
 
 <script type="text/javascript" src="jquery/headerQuery.js"></script>
-<t4 type="media" id="129892"/><!--skipnav.js--> 
+<t4 type="media" id="129892"/><!--skipnav.js-->
 
 </body>
 
