Fixes merging issues with Joel's fixes for president and admissions

--- a/development/terminalfour/src/html/2column.html
+++ b/development/terminalfour/src/html/2column.html
@@ -83,8 +83,8 @@
                         <!-- SITEMANAGER HEADER ENDS HERE -->
                         <!-- *********************************  -->
 
-        include('content.html')
-        include('panel.html')
+        @@include('content.html')
+        @@include('panel.html')
         @@include('promo.html')
 
                         <!-- *********************************  -->
@@ -257,7 +257,7 @@ lhnWin=window.open('http://chat.msudenver.edu/lhn/livechatvisitor.aspx?lhnid=294
     <script>
     w3IncludeHTML();
     </script>
-    <t4 type="media" id="129892"/><!--skipnav.js--> 
+    <t4 type="media" id="129892"/><!--skipnav.js-->
 </body>
 
 </html>
