--- a/development/terminalfour/src/html/index.html
+++ b/development/terminalfour/src/html/index.html
@@ -3,79 +3,18 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="initial-scale=1">
-	<title>MSU Denver - Homepage</title>
-  <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/7291556/7343172/css/fonts.css" />
-	<link href="style-assets/media/fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" media="screen" />
-	<link rel="stylesheet" href="style-assets/css/main-style.css" />
-<!--	<link rel="stylesheet" href="style-assets/lib/slick-1.6.0/slick/slick.css" />-->
-
-	<script src="style-assets/lib/jquery/jquery.min.js"></script>
 </head>
-    <body>
-        @@include('header.html')
-        @@include('topnavigation.html')
-        <main class="homepage-main">
-						<!-- @@include('homepage-second-nav.html') -->
-            @@include('homepage-feature-caption.html')
-            @@include('homepage-ryor.html')
-            @@include('homepage-news.html')
-            @@include('homepage-at-a-glance.html')
-            @@include('homepage-community.html')
-            @@include('homepage-events.html')
 
-        </main>
-        @@include('footer.html')
-        <script src="style-assets/lib/jquery/jquery.min.js"></script>
-        <script src="style-assets/lib/jquery-match-height/jquery.matchHeight.js"></script>
-<!--        <script src="style-assets/lib/slick-1.6.0/slick/slick.min.js"></script>-->
-        <script src="style-assets/lib/boostrap/bootstrap.min.js"></script>
-        <script>
-        $(document).ready(function() {
-            $('#homepage-feature-caption').carousel({
-                wrap: false,
-                interval: 1500,
-                keyboard: true
-            });
-            $('#homepage-feature-caption').on('slide.bs.carousel', function() {
-                console.log('slid');
-            } );
-        });
-        </script>
+<body>
 
-				<!-- allow mobile menu dropdown to scroll -->
-				<!-- <script>
-				$('#bs-example-navbar-collapse-1').css('max-height',$(window).height());
-				</script> -->
-				<script>
-				$('#menu-nav').css('max-height',$(window).height()-79);
-				</script>
-				<script>
-				// scrollTop function
-				$(window).scroll(function(){
-				  var width_threshold = 900;
-				  var href = document.location.href;
-				  var position = $(window).scrollTop();
-				  var width     =  $(window).width();
-				  $(".header-fluid").removeClass("header-fluid-change");
-				  $(".msudenver_logo").removeClass("msudenver_logo_change");
+	<h2><a href="/homepage.html"> Homepage layout </a></h2>
+	<h2><a href="/admissions.html"> Admissions layout </a></h2>
+	<h2><a href="/2column.html"> 2column layout </a></h2>
+	<h2><a href="/president.html"> President layout </a></h2>
+	<h2><a href="/studenthubhome.html"> Student Hub layout </a></h2>
+	<h2><a href="/studenthubsecondary.html"> Student Hub inner layout </a></h2>
 
+</body>
 
-					if( position <= 15 && width > width_threshold) {
-						$("a.btn.btn-default.visit-give-mobile").css("top", "-109px");
-						$("a.btn.btn-default.give-mobile").css("top", "-109px");
-						$("a.btn.btn-default.apply-mobile").css("top", "-109px");
-					}
-				  if( position > 15 && width > width_threshold) {
-				    $(".header-fluid").toggleClass("header-fluid-change");
-				    $(".msudenver_logo").toggleClass("msudenver_logo_change");
-						$("a.btn.btn-default.visit-give-mobile").css("top", "-95px");
-						$("a.btn.btn-default.give-mobile").css("top", "-95px");
-						$("a.btn.btn-default.apply-mobile").css("top", "-95px");
-				  }
-
-				});
-				</script>
-
-    </body>
 
 </html>
