--- a/index.html
+++ b/index.html
@@ -7,12 +7,19 @@
 
 <body>
 
-	<h2><a href="/homepage.html"> Homepage layout </a></h2>
-	<h2><a href="/admissions.html"> Admissions layout </a></h2>
-	<h2><a href="/2column.html"> 2column layout </a></h2>
-	<h2><a href="/president.html"> President layout </a></h2>
-	<h2><a href="/studenthubhome.html"> Student Hub layout </a></h2>
-	<h2><a href="/studenthubsecondary.html"> Student Hub inner layout </a></h2>
+
+
+    <h2><a href="/web-builder/www-root/homepage.html"> Homepage layout </a></h2>
+
+  	<h2><a href="/web-builder/www-root/admissions.html"> Admissions layout </a></h2>
+
+  	<h2><a href="/web-builder/www-root/2column.html"> 2column layout </a></h2>
+
+  	<h2><a href="/web-builder/www-root/president.html"> President layout </a></h2>
+
+  	<h2><a href="/web-builder/www-root/studenthubhome.html"> Student Hub layout </a></h2>
+
+    <h2><a href="/web-builder/www-root/studenthubsecondary.html"> Student Hub inner layout </a></h2>
 
 </body>
 
