--- a/development/terminalfour/src/html/admissions.html
+++ b/development/terminalfour/src/html/admissions.html
@@ -16,7 +16,7 @@
         @@include('topnavigation.html')
         <main class="">
                   <!-- @@include('homepage-second-nav.html') -->
-
+          @@include('admissionsHomepageIncludes/admissionsHomepageSlider.html')
         </main>
         @@include('footer.html')
         <script src="style-assets/lib/jquery/jquery.min.js"></script>
