adds carousel object to script tags inside the admissions.html file, configures slider timer. removes deprecated bootstrap carousel controls, adds carousel cta section markup to admissionsHomepageSlider.html file. creates new scss file for homepage admissions buttons. creates new scss files for homepage admissions responsive overrides. adds new scss file imports to main-style.scss for admissionsHomepage styles. adds grunt compiled main.style.css file.

--- a/development/terminalfour/src/html/admissions.html
+++ b/development/terminalfour/src/html/admissions.html
@@ -69,6 +69,11 @@
               }
 
             });
+
+            $('.carousel').carousel({
+              interval: 30000
+            });
+
             </script>
 
     </body>
