Revert "Merge branch 'admissions-dev' of https://github.com/msudenver/web-builder into admissions-dev"
This reverts commit 353c1f428d96bfe48520b65059b535dcfea9c7a2, reversing
changes made to 890a82bb697fa5883100020360d79035cc2835a9.

--- a/development/terminalfour/src/html/2column.html
+++ b/development/terminalfour/src/html/2column.html
@@ -41,7 +41,10 @@
 <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/7291556/7343172/css/fonts.css" />
 <link href="style-assets/media/fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" media="screen" />
 <!-- CSS -->
-<link rel="stylesheet" href="style-assets/css/main-style.css" />
+<link rel="stylesheet" href="style-assets/css/inner-style.css" />
+<!-- <link rel="stylesheet" href="style-assets/css/print.css" /> -->
+<!-- <link rel="stylesheet" href="style-assets/lib/slick-1.6.0/slick/slick.css" /> -->
+
 
 <!-- HTML5 shim & respond.js, for IE6-8 support of HTML5 elements -->
 <!--[if lt IE 9]>
@@ -80,8 +83,8 @@
                         <!-- SITEMANAGER HEADER ENDS HERE -->
                         <!-- *********************************  -->
 
-        @@include('content.html')
-        @@include('panel.html')
+        include('content.html')
+        include('panel.html')
         @@include('promo.html')
 
                         <!-- *********************************  -->
@@ -254,7 +257,6 @@ lhnWin=window.open('http://chat.msudenver.edu/lhn/livechatvisitor.aspx?lhnid=294
     <script>
     w3IncludeHTML();
     </script>
-    <t4 type="media" id="129892"/><!--skipnav.js-->
 </body>
 
 </html>
