--- a/development/terminalfour/src/html/2column.html
+++ b/development/terminalfour/src/html/2column.html
@@ -41,10 +41,7 @@
 <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/7291556/7343172/css/fonts.css" />
 <link href="style-assets/media/fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" media="screen" />
 <!-- CSS -->
-<link rel="stylesheet" href="style-assets/css/inner-style.css" />
-<!-- <link rel="stylesheet" href="style-assets/css/print.css" /> -->
-<!-- <link rel="stylesheet" href="style-assets/lib/slick-1.6.0/slick/slick.css" /> -->
-
+<link rel="stylesheet" href="style-assets/css/main-style.css" />
 
 <!-- HTML5 shim & respond.js, for IE6-8 support of HTML5 elements -->
 <!--[if lt IE 9]>
@@ -83,8 +80,8 @@
                         <!-- SITEMANAGER HEADER ENDS HERE -->
                         <!-- *********************************  -->
 
-        include('content.html')
-        include('panel.html')
+        @@include('content.html')
+        @@include('panel.html')
         @@include('promo.html')
 
                         <!-- *********************************  -->
@@ -257,6 +254,7 @@ lhnWin=window.open('http://chat.msudenver.edu/lhn/livechatvisitor.aspx?lhnid=294
     <script>
     w3IncludeHTML();
     </script>
+    <t4 type="media" id="129892"/><!--skipnav.js-->
 </body>
 
 </html>
