--- a/development/terminalfour/src/html/index.html
+++ b/development/terminalfour/src/html/index.html
@@ -6,13 +6,14 @@
 	<title>MSU Denver - Homepage</title>
   <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/7291556/7343172/css/fonts.css" />
 	<link href="style-assets/media/fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" media="screen" />
-	<link rel="stylesheet" href="style-assets/css/style.css" />
+	<link rel="stylesheet" href="style-assets/css/main-style.css" />
 <!--	<link rel="stylesheet" href="style-assets/lib/slick-1.6.0/slick/slick.css" />-->
 
 	<script src="style-assets/lib/jquery/jquery.min.js"></script>
 </head>
     <body>
         @@include('header.html')
+        @@include('topnavigation.html')
         <main class="homepage-main">
 						<!-- @@include('homepage-second-nav.html') -->
             @@include('homepage-feature-caption.html')
@@ -40,6 +41,41 @@
             } );
         });
         </script>
+
+				<!-- allow mobile menu dropdown to scroll -->
+				<!-- <script>
+				$('#bs-example-navbar-collapse-1').css('max-height',$(window).height());
+				</script> -->
+				<script>
+				$('#menu-nav').css('max-height',$(window).height()-79);
+				</script>
+				<script>
+				// scrollTop function
+				$(window).scroll(function(){
+				  var width_threshold = 900;
+				  var href = document.location.href;
+				  var position = $(window).scrollTop();
+				  var width     =  $(window).width();
+				  $(".header-fluid").removeClass("header-fluid-change");
+				  $(".msudenver_logo").removeClass("msudenver_logo_change");
+
+
+					if( position <= 15 && width > width_threshold) {
+						$("a.btn.btn-default.visit-give-mobile").css("top", "-109px");
+						$("a.btn.btn-default.give-mobile").css("top", "-109px");
+						$("a.btn.btn-default.apply-mobile").css("top", "-109px");
+					}
+				  if( position > 15 && width > width_threshold) {
+				    $(".header-fluid").toggleClass("header-fluid-change");
+				    $(".msudenver_logo").toggleClass("msudenver_logo_change");
+						$("a.btn.btn-default.visit-give-mobile").css("top", "-95px");
+						$("a.btn.btn-default.give-mobile").css("top", "-95px");
+						$("a.btn.btn-default.apply-mobile").css("top", "-95px");
+				  }
+
+				});
+				</script>
+
     </body>
 
 </html>
