--- a/development/terminalfour/src/html/admissions.html
+++ b/development/terminalfour/src/html/admissions.html
@@ -17,6 +17,7 @@
         <main class="">
                   <!-- @@include('homepage-second-nav.html') -->
           @@include('admissionsHomepageIncludes/admissionsHomepageSlider.html')
+          @@include('admissionsHomepageIncludes/admissionsHomepageApply.html')
           
         </main>
         @@include('footer.html')
