adds admissions homepage panel section. adds styles for homepage panels component. updates imports and include statements on admissionts.html and main-style.scss. adds compiled main-style.css file

--- a/development/terminalfour/src/html/admissions.html
+++ b/development/terminalfour/src/html/admissions.html
@@ -18,6 +18,7 @@
                   <!-- @@include('homepage-second-nav.html') -->
           @@include('admissionsHomepageIncludes/admissionsHomepageSlider.html')
           @@include('admissionsHomepageIncludes/admissionsHomepageApply.html')
+          @@include('admissionsHomepageIncludes/admissionsHomepagePanels.html')
           
         </main>
         @@include('footer.html')
