adds files for eab section including markup, includes, imports and styles. updates font styles including weights, sizes and family for the whole page.

--- a/development/terminalfour/src/html/admissions.html
+++ b/development/terminalfour/src/html/admissions.html
@@ -19,6 +19,7 @@
           @@include('admissionsHomepageIncludes/admissionsHomepageSlider.html')
           @@include('admissionsHomepageIncludes/admissionsHomepageApply.html')
           @@include('admissionsHomepageIncludes/admissionsHomepagePanels.html')
+          @@include('admissionsHomepageIncludes/admissionsHomepageEAB.html')
           
         </main>
         @@include('footer.html')
