first committ with prototype for brain-train

--- a/development/terminalfour/src/html/homepage.html
+++ b/development/terminalfour/src/html/homepage.html
@@ -14,12 +14,7 @@
         @@include('header.html')
         @@include('topnavigation.html')
         <main class="homepage-main">
-            @@include('homepage-feature-caption.html')
-            @@include('homepage-ryor.html')
-            @@include('homepage-news.html')
-            @@include('homepage-at-a-glance.html')
-            @@include('homepage-community.html')
-            @@include('homepage-events.html')
+						@@include('braintrain/braintrain.html')
 
         </main>
         @@include('footer.html')
