--- a/development/terminalfour/src/html/admissions.html
+++ b/development/terminalfour/src/html/admissions.html
@@ -20,6 +20,7 @@
           @@include('admissionsHomepageIncludes/admissionsHomepageApply.html')
           @@include('admissionsHomepageIncludes/admissionsHomepagePanels.html')
           @@include('admissionsHomepageIncludes/admissionsHomepageEAB.html')
+          @@include('admissionsHomepageIncludes/admissionsHomepageResources.html')
           
         </main>
         @@include('footer.html')
