adds markup element main to have a class 'admissionsHomepage'. consolidates buttons.scss styles to shorten the length of the file

--- a/development/terminalfour/src/html/admissions.html
+++ b/development/terminalfour/src/html/admissions.html
@@ -14,7 +14,7 @@
     <body>
         @@include('header.html')
         @@include('topnavigation.html')
-        <main class="">
+        <main class="admissionsHomepage">
                   <!-- @@include('homepage-second-nav.html') -->
           @@include('admissionsHomepageIncludes/admissionsHomepageSlider.html')
           @@include('admissionsHomepageIncludes/admissionsHomepageApply.html')
