--- a/www-root/admissions.html
+++ b/www-root/admissions.html
@@ -300,7 +300,7 @@ $(window).scroll(function(){
 	<div class="row panel-row">
 		<a href="#">
 			<div class="col-xs-12 col-sm-6 col-md-6 panel-sizing" style="background: url('style-assets/media/admissions-redesign/visit.jpg') center center no-repeat; background-size: cover; border: 10px solid white;">
-				<button class="btn btn-lg btn-default panel-cta center-block"><span>Visit</span></button>
+				<button class="btn btn-lg btn-default panel-cta center-block"><span>Visit <i class="fa fa-1x fa-chevron-right pointer"></i></span></button>
 				<div class="overlay">
 					<div class="overlay-content">
 						<p>In the heart of urban denver: go on the MSU Denver Virtual Tour to experience our campus.</p>
@@ -310,7 +310,7 @@ $(window).scroll(function(){
 		</a>
 		<a href="#">
 			<div class="col-xs-12 col-sm-6 col-md-6 panel-sizing" style="background: url('style-assets/media/admissions-redesign/campus-life.jpg') center center no-repeat; background-size: cover; border: 10px solid white;">
-				<button class="btn btn-lg btn-default panel-cta center-block"><span>Campus Life</span></button>
+				<button class="btn btn-lg btn-default panel-cta center-block"><span>Campus Life <i class="fa fa-1x fa-chevron-right pointer"></i></span></button>
 				<div class="overlay">
 					<div class="overlay-content">
 						<p>In the heart of urban denver: go on the MSU Denver Virtual Tour to experience our campus.</p>
@@ -320,7 +320,7 @@ $(window).scroll(function(){
 		</a>
 		<a href="#">
 			<div class="col-xs-12 col-sm-6 col-md-6 panel-sizing" style="background: url('style-assets/media/admissions-redesign/financial-aid-and-cost.jpg') center center no-repeat; background-size: cover; border: 10px solid white;">
-				<button class="btn btn-lg btn-default panel-cta center-block"><span>Cost + Financial Aid</span></button>
+				<button class="btn btn-lg btn-default panel-cta center-block"><span>Cost + Financial Aid <i class="fa fa-1x fa-chevron-right pointer"></i></span></button>
 				<div class="overlay">
 					<div class="overlay-content">
 						<p>In the heart of urban denver: go on the MSU Denver Virtual Tour to experience our campus.</p>
@@ -330,7 +330,7 @@ $(window).scroll(function(){
 		</a>
 		<a href="#">
 			<div class="col-xs-12 col-sm-6 col-md-6 panel-sizing" style="background: url('style-assets/media/admissions-redesign/virtual-tour.jpg') center center no-repeat; background-size: cover; border: 10px solid white;">
-				<button class="btn btn-lg btn-default panel-cta center-block"><span>Virtual Tour</span></button>
+				<button class="btn btn-lg btn-default panel-cta center-block"><span>Virtual Tour <i class="fa fa-1x fa-chevron-right pointer"></i></span></button>
 				<div class="overlay">
 					<div class="overlay-content">
 						<p>In the heart of urban denver: go on the MSU Denver Virtual Tour to experience our campus.</p>
@@ -340,7 +340,7 @@ $(window).scroll(function(){
 		</a>
 		<a href="#">
 			<div class="col-xs-12 col-sm-6 col-md-6 panel-sizing" style="background: url('style-assets/media/admissions-redesign/academic-programs.jpg') center center no-repeat; background-size: cover; border: 10px solid white;">
-				<button class="btn btn-lg btn-default panel-cta center-block"><span>Academic Programs</span></button>
+				<button class="btn btn-lg btn-default panel-cta center-block"><span>Academic Programs <i class="fa fa-1x fa-chevron-right pointer"></i></span></button>
 				<div class="overlay">
 					<div class="overlay-content">
 						<p>In the heart of urban denver: go on the MSU Denver Virtual Tour to experience our campus.</p>
@@ -350,7 +350,7 @@ $(window).scroll(function(){
 		</a>
 		<a href="#">
 			<div class="col-xs-12 col-sm-6 col-md-6 panel-sizing" style="background: url('style-assets/media/admissions-redesign/bienvenidos.jpg') center center no-repeat; background-size: cover; border: 10px solid white;">
-				<button class="btn btn-lg btn-default panel-cta center-block"><span>Bienvenidos</span></button>
+				<button class="btn btn-lg btn-default panel-cta center-block"><span>Bienvenidos <i class="fa fa-1x fa-chevron-right pointer"></i></span></button>
 				<div class="overlay">
 					<div class="overlay-content">
 						<p>In the heart of urban denver: go on the MSU Denver Virtual Tour to experience our campus.</p>
