--- a/development/terminalfour/src/html/admissions.html
+++ b/development/terminalfour/src/html/admissions.html
@@ -14,15 +14,15 @@
     <body>
         @@include('header.html')
         @@include('topnavigation.html')
-        <main class="admissionsHomepage">
-                  <!-- @@include('homepage-second-nav.html') -->
+
           @@include('admissionsHomepageIncludes/admissionsHomepageSlider.html')
+          @@include('admissionsHomepageIncludes/admissionsHomepageContactPromo.html')
           @@include('admissionsHomepageIncludes/admissionsHomepageApply.html')
           @@include('admissionsHomepageIncludes/admissionsHomepagePanels.html')
           @@include('admissionsHomepageIncludes/admissionsHomepageEAB.html')
           @@include('admissionsHomepageIncludes/admissionsHomepageResources.html')
-          
-        </main>
+
+
         @@include('footer.html')
         <script src="style-assets/lib/jquery/jquery.min.js"></script>
         <script src="style-assets/lib/jquery-match-height/jquery.matchHeight.js"></script>
