--- a/www-root/admissions.html
+++ b/www-root/admissions.html
@@ -170,21 +170,7 @@ $(window).scroll(function(){
 </script>
 
         
-        <main class="">
-                  <!-- <section class="homepage-feature" id="homepage-second-nav">
-  <ul>
-    <li>
-      <a href="">Current Students</a>
-    </li>
-    <li>
-      <a href="">Schedules, Calendar &#38; Catalog</a>
-    </li>
-    <li>
-      <a href="">Athletics</a>
-    </li>
-  </ul>
-</section>
- -->
+
           
 <section class="admissionsHomepage admissionsHomepageSlider" id="">
 
@@ -301,9 +287,7 @@ $(window).scroll(function(){
 	</div>
 </section>
 
-          <section class="admissionsHomepage admissionsHomepagePanels">
-
-	<div class="row panel-row">
+          	<div class="admissionsHomepage admissionsHomepagePanels">
 		<a href="#">
 			<div class="col-xs-12 col-sm-6 col-md-6 panel-sizing" style="background: url('style-assets/media/admissions-redesign/visit.jpg') center center no-repeat; background-size: cover; border: 10px solid white;">
 				<button class="btn btn-lg btn-default panel-cta center-block"><span>Visit <i class="fa fa-1x fa-chevron-right pointer"></i></span></button>
@@ -314,6 +298,9 @@ $(window).scroll(function(){
 				</div>
 			</div>
 		</a>
+	</div>
+
+	<div class="admissionsHomepage admissionsHomepagePanels">
 		<a href="#">
 			<div class="col-xs-12 col-sm-6 col-md-6 panel-sizing" style="background: url('style-assets/media/admissions-redesign/campus-life.jpg') center center no-repeat; background-size: cover; border: 10px solid white;">
 				<button class="btn btn-lg btn-default panel-cta center-block"><span>Campus Life <i class="fa fa-1x fa-chevron-right pointer"></i></span></button>
@@ -324,6 +311,9 @@ $(window).scroll(function(){
 				</div>
 			</div>
 		</a>
+	</div>
+
+	<div class="admissionsHomepage admissionsHomepagePanels">
 		<a href="#">
 			<div class="col-xs-12 col-sm-6 col-md-6 panel-sizing" style="background: url('style-assets/media/admissions-redesign/financial-aid-and-cost.jpg') center center no-repeat; background-size: cover; border: 10px solid white;">
 				<button class="btn btn-lg btn-default panel-cta center-block"><span>Cost + Financial Aid <i class="fa fa-1x fa-chevron-right pointer"></i></span></button>
@@ -334,6 +324,9 @@ $(window).scroll(function(){
 				</div>
 			</div>
 		</a>
+	</div>
+
+	<div class="admissionsHomepage admissionsHomepagePanels">
 		<a href="#">
 			<div class="col-xs-12 col-sm-6 col-md-6 panel-sizing" style="background: url('style-assets/media/admissions-redesign/virtual-tour.jpg') center center no-repeat; background-size: cover; border: 10px solid white;">
 				<button class="btn btn-lg btn-default panel-cta center-block"><span>Virtual Tour <i class="fa fa-1x fa-chevron-right pointer"></i></span></button>
@@ -344,6 +337,8 @@ $(window).scroll(function(){
 				</div>
 			</div>
 		</a>
+	</div>
+	<div class="admissionsHomepage admissionsHomepagePanels">
 		<a href="#">
 			<div class="col-xs-12 col-sm-6 col-md-6 panel-sizing" style="background: url('style-assets/media/admissions-redesign/academic-programs.jpg') center center no-repeat; background-size: cover; border: 10px solid white;">
 				<button class="btn btn-lg btn-default panel-cta center-block"><span>Academic Programs <i class="fa fa-1x fa-chevron-right pointer"></i></span></button>
@@ -354,6 +349,8 @@ $(window).scroll(function(){
 				</div>
 			</div>
 		</a>
+	</div>
+	<div class="admissionsHomepage admissionsHomepagePanels">
 		<a href="#">
 			<div class="col-xs-12 col-sm-6 col-md-6 panel-sizing" style="background: url('style-assets/media/admissions-redesign/bienvenidos.jpg') center center no-repeat; background-size: cover; border: 10px solid white;">
 				<button class="btn btn-lg btn-default panel-cta center-block"><span>Bienvenidos <i class="fa fa-1x fa-chevron-right pointer"></i></span></button>
@@ -365,12 +362,6 @@ $(window).scroll(function(){
 			</div>
 		</a>
 	</div>
-
-	<script>
-
-	</script>
-
-</section>
 
           <section class="admissionsHomepage admissionsHomepageEAB">
 	<div class="row eab-row">
@@ -439,41 +430,41 @@ $(window).scroll(function(){
 	<div class="resources-container">
 		<div class="container">
 			<div class="row">
-				<div class="col-xs-12 col-sm-6 col-md-4">
-					<a href="" class="resources-link"><p>Academic Programs</p></a>
+				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
+					<a href="#" >Academic Programs</a>
 				</div>
-				<div class="col-xs-12 col-sm-6 col-md-4">
-					<a href="" class="resources-link"><p>Visit Us</p></a>
+				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
+					<a href="" >Visit Us</a>
 				</div>
-				<div class="col-xs-12 col-sm-6 col-md-4">
-					<a href="" class="resources-link"><p>Admissions Requirements</p></a>
+				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
+					<a href="" >Admissions Requirements</a>
 				</div>
-				<div class="col-xs-12 col-sm-6 col-md-4">
-					<a href="" class="resources-link"><p>Cost</p></a>
+				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
+					<a href="" >Cost</a>
 				</div>
-				<div class="col-xs-12 col-sm-6 col-md-4">
-					<a href="" class="resources-link"><p>Meet an Admissions Counselor</p></a>
+				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
+					<a href="" >Meet an Admissions Counselor</a>
 				</div>
-				<div class="col-xs-12 col-sm-6 col-md-4">
-					<a href="" class="resources-link"><p>Residency</p></a>
+				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
+					<a href="" >Residency</a>
 				</div>
-				<div class="col-xs-12 col-sm-6 col-md-4">
-					<a href="" class="resources-link"><p>Campus Life</p></a>
+				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
+					<a href="" >Campus Life</a>
 				</div>
-				<div class="col-xs-12 col-sm-6 col-md-4">
-					<a href="" class="resources-link"><p>Request Information</p></a>
+				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
+					<a href="" >Request Information</a>
 				</div>
-				<div class="col-xs-12 col-sm-6 col-md-4">
-					<a href="" class="resources-link"><p>Admissions Forms</p></a>
+				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
+					<a href="" >Admissions Forms</a>
 				</div>
-				<div class="col-xs-12 col-sm-6 col-md-4">
-					<a href="" class="resources-link"><p>Parents</p></a>
+				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
+					<a href="" >Parents</a>
 				</div>
-				<div class="col-xs-12 col-sm-6 col-md-4">
-					<a href="" class="resources-link"><p>High School / Community College Counselors</p></a>
+				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
+					<a href="" >High School / Community College Counselors</a>
 				</div>
-				<div class="col-xs-12 col-sm-6 col-md-4">
-					<a href="" class="resources-link"><p>Contact Us</p></a>
+				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
+					<a href="" >Contact Us</a>
 				</div>
 			</div>
 		</div>
@@ -482,7 +473,7 @@ $(window).scroll(function(){
 </section>
 
 
-        </main>
+
         <!-- ** Site wide footer ** -->
 
     <footer>
