--- a/development/terminalfour/src/html/admissions.html
+++ b/development/terminalfour/src/html/admissions.html
@@ -16,7 +16,7 @@
         @@include('topnavigation.html')
 
           @@include('admissionsHomepageIncludes/admissionsHomepageSlider.html')
-          @@include('admissionsHomepageIncludes/admissionsHomepageContactPromo.html')
+          <!-- @@include('admissionsHomepageIncludes/admissionsHomepageContactPromo.html') -->
           @@include('admissionsHomepageIncludes/admissionsHomepageApply.html')
           @@include('admissionsHomepageIncludes/admissionsHomepagePanels.html')
           @@include('admissionsHomepageIncludes/admissionsHomepageEAB.html')
