adds link to newsroom page in index.html file. adds compiled www-root/index.html file

--- a/development/terminalfour/src/html/index.html
+++ b/development/terminalfour/src/html/index.html
@@ -13,6 +13,7 @@
 	<h2><a href="/president.html"> President layout </a></h2>
 	<h2><a href="/studenthubhome.html"> Student Hub layout </a></h2>
 	<h2><a href="/studenthubsecondary.html"> Student Hub inner layout </a></h2>
+	<h2><a href="/newsroom.html"> Newsroom Layout </a></h2>
 
 </body>
 
