--- a/www-root/index.html
+++ b/www-root/index.html
@@ -13,6 +13,7 @@
 	<h2><a href="/president.html"> President layout </a></h2>
 	<h2><a href="/studenthubhome.html"> Student Hub layout </a></h2>
 	<h2><a href="/studenthubsecondary.html"> Student Hub inner layout </a></h2>
+	<h2><a href="/newsroom.html"> Newsroom Layout </a></h2>
 
 </body>
 
