adds compiled files. adds styles for nav bar. updates newsroomNav component with new classes. adds placehodler to banner section on main nav.

--- a/development/terminalfour/src/html/newsroom.html
+++ b/development/terminalfour/src/html/newsroom.html
@@ -11,7 +11,7 @@
 
    <script src="style-assets/lib/jquery/jquery.min.js"></script>
 </head>
-    <body>
+    <body style="padding-top: 0px;">
         
         @@include('newsroomHomepageIncludes/newsroomNav.html')
           <!-- newsroom includes go here -->
