adds link to newsroom preview for gihubpages

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
     <h2><a href="/web-builder/www-root/studenthubsecondary.html"> Student Hub inner layout </a></h2>
 
+    <h2><a href="/web-builder/www-root/newsroom.html"> Newsroom </a></h2>
 </body>
 
 
