removes section tags and classes from newsroom templates. creates new newsroom-elements.scss file. updates sizing and padding on some elements in newsroom-nav.scss. updates imports on newsroom-style.scss. adds compiled files

--- a/development/terminalfour/src/html/newsroom.html
+++ b/development/terminalfour/src/html/newsroom.html
@@ -13,12 +13,15 @@
 </head>
     <body style="padding-top: 0px;">
         
+        <!-- header includes -->
         @@include('newsroomHomepageIncludes/newsroomNav.html')
-          <!-- newsroom includes go here -->
-          @@include('newsroomHomepageIncludes/newsroomHomepageHero.html')
+
+        <!-- newsroom includes go here -->
+        @@include('newsroomHomepageIncludes/newsroomHomepageHero.html')
+        
+        <!-- footer includes -->
 
 
-        @@include('footer.html')
         <script src="style-assets/lib/jquery/jquery.min.js"></script>
         <script src="style-assets/lib/jquery-match-height/jquery.matchHeight.js"></script>
 <!--        <script src="style-assets/lib/slick-1.6.0/slick/slick.min.js"></script>-->
