updates homepage hero with markup and classes. creates new newsroom-hero.scss file. updates newsroom-nav.scsc to have improved rulset definitions, removed some 'important' flags. updated newsroom-style.scss with import of the new newsroom-hero.scss file. adds compiled files

--- a/www-root/newsroom.html
+++ b/www-root/newsroom.html
@@ -58,9 +58,14 @@
 
 
         <!-- newsroom includes go here -->
-        <div class="container">
-	<div class="row">
-		<h2>Newsroom Homepage Hero Goes here</h2>
+        <div class="homepage-hero">
+	<img src="style-assets/media/newsroom-redesign/bradleypayton-insider-0400-ms180208-cc.jpg" alt="Featured Story Image">
+	<div class="container">
+		<div class="hero-tab">
+			<h3>Featured Story</h3>
+			<h2>Description of the title above and some additional information The user might need.</h2>
+			<h4>Story: Doug McPherson / Photos: Mark Stahl</h4>
+		</div>	
 	</div>
 </div>
         <div class="container-fluid">
