adds markup to newsroomarticles.html . adds styles to newsroom-artciles.css. adds compiled files

--- a/www-root/newsroom.html
+++ b/www-root/newsroom.html
@@ -77,10 +77,27 @@
 		</div>
 	</div>
 </div>
-        <div class="container-fluid">
+        <div class="container-fluid article-container">
 	<div class="row">
-		<div class="col-md-12">
-			<h3>hello world</h3>
+		<div class="col-md-12 text-center">
+			<div class="col-xs-12 col-sm-6 col-md-4">
+				<img src="http://via.placeholder.com/580x450" alt="Article Image">
+				<h4>Category</h4>
+				<h3><a href="#">Double-check your paycheck with the new tax law</a></h3>
+				<p>Tax Day for 2017 is still a few months away, but you can make sure you're prepared to do your 2018 taxes right now.</p>
+			</div>
+			<div class="col-xs-12 col-sm-6 col-md-4">
+				<img src="http://via.placeholder.com/580x450" alt="Article Image">
+				<h4>Category</h4>
+				<h3><a href="#">Double-check your paycheck with the new tax law</a></h3>
+				<p>Tax Day for 2017 is still a few months away, but you can make sure you're prepared to do your 2018 taxes right now.</p>
+			</div>
+			<div class="col-xs-12 col-sm-6 col-md-4">
+				<img src="http://via.placeholder.com/580x450" alt="Article Image">
+				<h4>Category</h4>
+				<h3><a href="#">Double-check your paycheck with the new tax law</a></h3>
+				<p>Tax Day for 2017 is still a few months away, but you can make sure you're prepared to do your 2018 taxes right now.</p>
+			</div>
 		</div>
 	</div>
 </div>
