adds some styles to the newsroom-footer.scss file. adds additional markup to newsroomFooter.html

--- a/www-root/newsroom.html
+++ b/www-root/newsroom.html
@@ -131,7 +131,33 @@
         <!-- footer includes -->
 
         <footer>
-	<h2>hello i'm the footer</h2>
+	<div class="footer-body">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-md-4">
+					<h3 class="footer-header">News Resources</h3>
+					<ul>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+					</ul>
+				</div>
+				<div class="col-md-4">
+					<h3 class="footer-header"></h3>
+					<ul>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+					</ul>
+				</div>
+				<div class="col-md-4">
+					<img src="" alt="">
+				</div>
+			</div>
+		</div>
+	</div>
 </footer>
 
         <script src="style-assets/lib/jquery/jquery.min.js"></script>
