adds finishing touches on desktop footer files. adds compiled files.

--- a/www-root/newsroom.html
+++ b/www-root/newsroom.html
@@ -140,7 +140,7 @@
 						<li><a href="">Media Contacts</a></li>
 						<li><a href="">Experts Guide</a></li>
 						<li><a href="">For Journalists</a></li>
-						<li><a href="">MSU Denver Media Library</a></li>
+						<li style="border-bottom: none;"><a href="">MSU Denver Media Library</a></li>
 					</ul>
 				</div>
 				<div class="col-md-4">
@@ -149,7 +149,7 @@
 						<li><a href="">Subscribe to the insider</a></li>
 						<li><a href="">Submit a story</a></li>
 						<li><a href="">Send us feedback</a></li>
-						<li><a href="">Contact Us</a></li>
+						<li style="border-bottom: none;"><a href="">Contact Us</a></li>
 					</ul>
 				</div>
 				<div class="col-md-4">
@@ -181,13 +181,13 @@
 	<div class="footer-bottom">
 		<div class="container">
 			<div class="row text-center">
-				<div class="col-md-4">
+				<div class="col-md-4 msu-links">
 					<a href="">MSUDenver.edu</a>
 				</div>
-				<div class="col-md-4">
+				<div class="col-md-4 msu-links">
 					<a href="">Give to MSU Denver</a>
 				</div>
-				<div class="col-md-4">
+				<div class="col-md-4 msu-links" style="border-right: none;">
 					<a href="">Apply to MSU Denver</a>
 				</div>
 			</div>
@@ -195,7 +195,9 @@
 				<div class="col-md-12">
 					Metropolitan State University of Denver
 					<br>
-					<a href="">Privacy</a>, <a href="">Terms</a>, and <a href="">Conditions</a>
+					<span class="links">
+						<a href="">Privacy</a>, <a href="">Terms</a>, and <a href="">Conditions</a>
+					</span>
 				</div>
 			</div>
 		</div>
