comments out jquery script tag in newsroom.html. adds custom/scripts folder with newsroom.js. adds compiled file from a previous build

--- a/development/terminalfour/src/html/admissions.html
+++ b/development/terminalfour/src/html/admissions.html
@@ -9,7 +9,8 @@
    <link rel="stylesheet" href="style-assets/css/main-style.css" />
 <!--  <link rel="stylesheet" href="style-assets/lib/slick-1.6.0/slick/slick.css" />-->
 
-   <script src="style-assets/lib/jquery/jquery.min.js"></script>
+   <!-- <script src="style-assets/lib/jquery/jquery.min.js"></script> -->
+   
 </head>
     <body>
         @@include('header.html')
