creates newsroom-detail.html page. updates index.html with link and path to the newsroom-detail.html page

--- a/development/terminalfour/src/html/index.html
+++ b/development/terminalfour/src/html/index.html
@@ -14,6 +14,7 @@
 	<h2><a href="/studenthubhome.html"> Student Hub layout </a></h2>
 	<h2><a href="/studenthubsecondary.html"> Student Hub inner layout </a></h2>
 	<h2><a href="/newsroom.html"> Newsroom Layout </a></h2>
+	<h2><a href="/newsroom-detail.html"> Newsroom Detail </a></h2>
 
 </body>
 
